--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,8 @@
     <uses-permission android:name="ru.evotor.permission.receipt.printExtra.SET" /> <!-- Разрешение на передачу чека по email или на телефон -->
     <uses-permission android:name="ru.evotor.permission.receipt.print.INTERNET_RECEIPT" />
     <uses-permission android:name="ru.evotor.pushnotifications.PUSH_RECEIVE" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
-    <!--    Для версии P (Android 9 : API level: 28)-->
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-
-    <!--    Интеренет для Retrofit-->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /> <!-- Для версии P (Android 9 : API level: 28) -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" /> <!-- Интеренет для Retrofit -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="ru.evotor.permission.receipt.print.INTERNET_RECEIPT" />
     <uses-permission android:name="ru.evotor.permission.receipt.print.INTERNET" />
@@ -24,13 +20,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Test_evo">
+        <receiver
+            android:name=".services.receiver.InstallReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter><!--
+                <action android:name="android.intent.action.PACKAGE_ADDED" />
+                <action android:name="android.intent.action.PACKAGE_REMOVED" />-->
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
+                <action android:name="android.intent.action.PACKAGE_REPLACED"/>
 
+<!--                <data android:scheme="package" />-->
+            </intent-filter>
+        </receiver>
         <receiver android:name=".services.receiver.BootBroadcastReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-
         <receiver
             android:name=".services.receiver.PushReceiver"
             android:permission="ru.evotor.pushnotifications.PUSH_SENDER">
@@ -42,7 +49,7 @@
         <service
             android:name=".services.MyService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
         <service
             android:name=".services.ForegroundServiceDispatcher"
             android:enabled="true"
