--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,16 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
     implementation 'joda-time:joda-time:2.10.10'
 
    /*Evotor API*/
     implementation group: 'com.github.evotor', name: 'integration-library', version: 'v0.4.48'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
 
     /*Lombook*/
     compileOnly 'org.projectlombok:lombok:1.18.16'
