--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <!--    <uses-permission android:name="android.permission.QUICKBOOT_POWERON" />-->
     <!-- Разрешение на печать своих данных в чеке -->
     <uses-permission android:name="ru.evotor.permission.receipt.printExtra.SET" /> <!-- Разрешение на передачу чека по email или на телефон -->
-    <uses-permission android:name="ru.evotor.permission.receipt.print.INTERNET_RECEIPT" />
+    <!--<uses-permission android:name="ru.evotor.permission.receipt.print.INTERNET_RECEIPT" />-->
     <uses-permission android:name="ru.evotor.pushnotifications.PUSH_RECEIVE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" /> <!-- Интеренет для Retrofit -->
     <uses-permission android:name="android.permission.INTERNET" />
