--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,10 @@ android {
 }
 
 dependencies {
+    /*Разворачивающийся список в меню*/
+//    implementation 'com.github.cachapa:ExpandableLayout:2.9.2'
+
+
     implementation 'com.google.android.material:material:1.3.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
 
