--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
 }
 
 dependencies {
+    implementation 'cn.aigestudio.wheelpicker:WheelPicker:1.1.3'
+
     /*Разворачивающийся список в меню*/
 //    implementation 'com.github.cachapa:ExpandableLayout:2.9.2'
 
