--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ android {
 }
 
 dependencies {
+    /*Gson*/
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    /*Колесо выбора времени*/
     implementation 'cn.aigestudio.wheelpicker:WheelPicker:1.1.3'
 
     /*Разворачивающийся список в меню*/
@@ -64,6 +67,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
