--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
     <uses-permission android:name="ru.evotor.permission.receipt.print.INTERNET_RECEIPT" />
     <uses-permission android:name="ru.evotor.permission.receipt.print.INTERNET" />
     <uses-permission android:name="ru.evotor.permission.PRINT_Z_REPORT" />
+    <!--Для печати произвольных данных на чековой ленте-->
+    <uses-permission android:name="ru.evotor.permission.receipt.printExtra.SET" />
     <!--    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />-->
 
     <application
