--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,11 @@ android {
 }
 
 dependencies {
+    /*Генератор QR кодов*/
+    implementation group: 'com.google.zxing', name: 'android-core', version: '3.3.0'
+    implementation group: 'com.google.zxing', name: 'core', version: '3.4.1'
+
+
     /*Gson*/
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     /*Колесо выбора времени*/
