Реализован зеленый переключатель в боковом меню

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,8 +80,7 @@
         <activity
             android:name=".MainActivity"
             android:icon="@mipmap/ic_launcher"
-            android:label="Example tile"
-            android:theme="@style/NoActionBar">
+            android:label="Example tile">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
