Добавил отображение качетсва сети. Исправил ошибку связанную с окрытием инф. о чеке и возвратом к списку чеков.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.potterhsu:Pinger:v1.1'
+
     /*Генератор QR кодов*/
     implementation group: 'com.google.zxing', name: 'android-core', version: '3.3.0'
     implementation group: 'com.google.zxing', name: 'core', version: '3.4.1'
