Выполнил перенос индикатора качества сети в блок информации о смене. Сделал свою реализацию пингера. Перенес его в SessionPresenter для дальнейшего использования в Диспетчере печати.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.potterhsu:Pinger:v1.1'
+//    implementation 'com.github.potterhsu:Pinger:v1.1'
 
     /*Генератор QR кодов*/
     implementation group: 'com.google.zxing', name: 'android-core', version: '3.3.0'
