--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
     <uses-permission android:name="ru.evotor.permission.receipt.printExtra.SET" />
     <!--    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />-->
 
+<!--    android:usesCleartextTraffic="true"-->
     <application
         android:name="ru.softvillage.fiscalizer.EvoApp"
         android:allowBackup="true"
